WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
38650
[Gtk]: DRT does not support frame flattening testing
https://bugs.webkit.org/show_bug.cgi?id=38650
Summary
[Gtk]: DRT does not support frame flattening testing
Antonio Gomes
Reported
2010-05-06 09:39:00 PDT
win, mac and qt does support testing frame flattening, but gtk. see
https://bugs.webkit.org/show_bug.cgi?id=32717
for details
Attachments
patch v1: API + DRT support + Unskip
(12.39 KB, patch)
2010-10-14 21:33 PDT
,
Antonio Gomes
no flags
Details
Formatted Diff
Diff
(committed r69919, r=mrobinson,xan) patch v2: API + DRT support + Unskip + Expected test results
(34.76 KB, patch)
2010-10-16 05:43 PDT
,
Antonio Gomes
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Antonio Gomes
Comment 1
2010-10-13 06:12:58 PDT
Xan, Martin, Gustavo, would you guys be Ok if I added a settings to enable it, like we did for spatial-navigation in
bug 35701
? If so, I can do it.
Martin Robinson
Comment 2
2010-10-13 07:56:27 PDT
Sure, for things only used in the DRT, this we usually have them as private members of the API at first.
Antonio Gomes
Comment 3
2010-10-14 21:33:33 PDT
Created
attachment 70831
[details]
patch v1: API + DRT support + Unskip
Antonio Gomes
Comment 4
2010-10-14 21:34:19 PDT
The documentation added was based on Qt's documentation for similar WebSetting.
Antonio Gomes
Comment 5
2010-10-15 07:07:38 PDT
btw, all frame flattening expected results dump render tree and then are platform specific due to font/pixel differences. I have the results here. They are similar to Qt's results and will be committed altogether with the patch.
Martin Robinson
Comment 6
2010-10-15 08:13:44 PDT
Comment on
attachment 70831
[details]
patch v1: API + DRT support + Unskip View in context:
https://bugs.webkit.org/attachment.cgi?id=70831&action=review
> WebKit/gtk/webkit/webkitwebsettings.cpp:607 > + * Weither to enable the Frame Flattening. With this setting each subframe is expanded
Should be "Whether" here.
Martin Robinson
Comment 7
2010-10-15 08:14:33 PDT
This looks great to me. Thanks for implementing this! I would give the r+, but we need one other GTK+ reviewer to approve the API change (and possibly double-check the @since line).
Xan Lopez
Comment 8
2010-10-15 08:34:54 PDT
I had never heard of this, but the name of the property seems reasonable. @since should be 1.3.5, 1.3.0 was released a long time ago.
Antonio Gomes
Comment 9
2010-10-15 13:12:53 PDT
do I hear a r+ with this two issues addressed + the layout test expected files added? :)
Antonio Gomes
Comment 10
2010-10-16 05:43:05 PDT
Created
attachment 70951
[details]
(committed
r69919
, r=mrobinson,xan) patch v2: API + DRT support + Unskip + Expected test results Fixed: 1) s/Weither/Whether in the documentation; 2) s/1.3.0/1.3.5 for the API version; 3) Added expected results.
WebKit Review Bot
Comment 11
2010-10-16 05:47:02 PDT
Attachment 70951
[details]
did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style']" exit_code: 1 LayoutTests/ChangeLog:9: Line contains tab character. [whitespace/tab] [5] Total errors found: 1 in 17 files If any of these errors are false positives, please file a bug against check-webkit-style.
Antonio Gomes
Comment 12
2010-10-16 05:54:14 PDT
(In reply to
comment #11
)
>
Attachment 70951
[details]
did not pass style-queue: > > Failed to run "['WebKitTools/Scripts/check-webkit-style']" exit_code: 1 > LayoutTests/ChangeLog:9: Line contains tab character. [whitespace/tab] [5] > Total errors found: 1 in 17 files > > > If any of these errors are false positives, please file a bug against check-webkit-style.
Fixed locally.
Martin Robinson
Comment 13
2010-10-16 10:07:36 PDT
Comment on
attachment 70951
[details]
(committed
r69919
, r=mrobinson,xan) patch v2: API + DRT support + Unskip + Expected test results Great. Thanks again!
Antonio Gomes
Comment 14
2010-10-16 20:54:33 PDT
Comment on
attachment 70951
[details]
(committed
r69919
, r=mrobinson,xan) patch v2: API + DRT support + Unskip + Expected test results Clearing flags on attachment: 70951 Committed
r69919
: <
http://trac.webkit.org/changeset/69919
>
Antonio Gomes
Comment 15
2010-10-16 21:48:35 PDT
Proper test expectation results landed in <
http://trac.webkit.org/changeset/69921
>
WebKit Review Bot
Comment 16
2010-10-16 22:23:42 PDT
http://trac.webkit.org/changeset/69919
might have broken GTK Linux 64-bit Debug The following tests are not passing: fast/frames/flattening/frameset-flattening-grid.html fast/frames/flattening/frameset-flattening-simple.html fast/frames/flattening/frameset-flattening-subframe-resize.html fast/frames/flattening/frameset-flattening-subframesets.html http/tests/inspector/console-xhr-logging.html
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug