[Gtk]: DRT does not support frame flattening testing https://bugs.webkit.org/show_bug.cgi?id=38650

Reviewed by Martin Robinson and Xan Lopez.
Patch by Antonio Gomes <agomes@rim.com>

WebKit/gtk:

Implement enable-frame-flattening API for Gtk+.

* webkit/webkitwebsettings.cpp:
(webkit_web_settings_class_init):
(webkit_web_settings_set_property):
(webkit_web_settings_get_property):
(webkit_web_settings_copy):
* webkit/webkitwebview.cpp:
(webkit_web_view_update_settings):
(webkit_web_view_settings_notify):

WebKitTools:

Implement DRT's support for toggling on/off frame flattening
support.

* DumpRenderTree/gtk/DumpRenderTree.cpp:
(resetDefaultsToConsistentValues):
* DumpRenderTree/gtk/LayoutTestControllerGtk.cpp:
(LayoutTestController::setFrameFlatteningEnabled):

LayoutTests:

Unskipping passing frame flattening tests and adding expected results
for them.

* platform/gtk/Skipped:

Canonical link: https://commits.webkit.org/60488@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@69919 268f45cc-cd09-0410-ab3c-d52691b4dbfc